--- a/views/student/addOrEdit.hbs
+++ b/views/student/addOrEdit.hbs
@@ -1,5 +1,6 @@
-<h3>{{ viewTitle }}</h3>
+<h3>{{viewTitle}}</h3>
 <form action="/student" class="form" method="post" autocomplete="off">
+  <input type="hidden" name="_id" value="{{ student._id }}">
   <div class="form-group">
     <label for="student">Full Name</label>
     <input type="text" class="form-control" , name="full name" value="{{ student.name}}">
