adding font and image

--- a/views/blog/index.ejs
+++ b/views/blog/index.ejs
@@ -1,1 +1,19 @@
-<p>Home</p>
+<div class="author">
+  <div class="author_heading">Hi, I am Raddy.</div>
+  <div class="author_body">Web developer and content creator</div>
+</div>
+
+<img src="/img/portfolio.webp" alt="Hero image" class="hero-image" width="981" height="528">
+<section class="article">
+  <h2 calss="article_heading">Welcome to my blog</h2>
+  <ul class="article-ul">
+    <li>
+      <a href="#">
+        <span>Post Title</span>
+        <span class="article-list-date">Date</span>
+      </a>
+    </li>
+  </ul>
+
+  <a href="#" class="pagination">View Older Posts</a>
+</section>
