--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,16 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;600;700&display=swap');
 
 :root {
-  --primary-color: #007bff;
-  --secondary-color: #6c757d;
-  --success-color: #28a745;
-  --info-color: #17a2b8;
-  --warning-color: #ffc107;
-  --danger-color: #dc3545;
-  --light-color: #f8f9fa;
-  --dark-color: #343a40;
+  --black: #1c1c1c;
+  --gray: #7E7E7E;
+  --gray-light: #E4E4E4;
+  --red: #b30000;
   --font-size-base: 1rem;
-  --font-size-md: clamp(1.25rem, 0.61vw + 1.1rem, 1.5rem);
+  --font-size-md: clamp(1.25rem, 0.61vw + 1.1rem, 1.58rem);
   --font-size-lg: clamp(1.56rem, 1vw + 1.31rem, 2.11rem);
   --font-size-xl: clamp(2.44rem, 2.38vw + 1.85rem, 3.75rem);
   --border-radius: 10px;
@@ -18,18 +14,15 @@
 
 body {
   font-family: 'Poppins', sans-serif;
-  font-size: var(--font-size-base);
-  line-height: 1.5;
   color: var(--black);
+  font-size: var(--font-size-base);
   background-color: #FAF5EE;
-  background-image: url('/img/noise-background.jpg');
+  background-image: url("/img/img-noise-361x370.png");
   margin: 0;
-  padding: 0;
 }
 
 a {
   color: var(--black);
-  text-decoration: none;
 }
 
 h1 {
@@ -51,18 +44,18 @@ input[type="search"],
 select,
 textarea {
   font-family: 'Poppins', sans-serif;
-  font-size: var(--font-size-base);
+  font-size: 1rem;
   display: block;
-  box-sizing: 100%;
+  box-sizing: border-box;
   width: 100%;
-  padding: 0.75rem 0.75rem;
+  padding: 0.7rem 0.75rem;
   margin-bottom: 1rem;
 }
 
 .btn {
   background-color: var(--black);
-  color: var(--white);
   border: none;
+  color: white;
   padding: 16px 32px;
   text-decoration: none;
   margin: 4px 2px;
@@ -74,13 +67,13 @@ textarea {
   background-color: var(--red);
 }
 
+
 img {
   width: 100%;
   height: auto;
-  object-fit: cover;
 }
 
-/* layout */
+/* Layout */
 .container {
   max-width: 982px;
   margin: 0 auto;
@@ -91,7 +84,7 @@ img {
   padding: 20px 0;
 }
 
-/* image */
+/* Hero Section */
 .hero-image {
   max-height: 528px;
   filter: drop-shadow(0px 44px 34px rgba(0, 0, 0, 0.25));
@@ -99,71 +92,54 @@ img {
   border-radius: var(--border-radius);
 }
 
-/* header */
+
+/* Main Header */
 .header {
   display: grid;
   align-items: center;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: auto;
-  padding-top: 10px;
   grid-template-areas:
     "logo button"
-    "menu menu"
-  ;
+    "menu menu";
+  padding-top: 10px;
 }
 
-@media screen and (max-width: 768px) {
+@media only screen and (min-width: 768px) {
   .header {
-    display: grid;
-    align-items: center;
     grid-template-columns: auto 1fr auto;
-    grid-template-rows: auto;
-    padding-top: 10px;
     grid-template-areas:
-      "logo"
-      "menu"
-      "button"
-    ;
+      "logo menu button";
   }
-
 }
 
-.header-logo {
-  grid-area: logo;
+.header_logo {
   font-weight: 800;
-  font-size: 25;
+  font-size: 25px;
   text-decoration: none;
+  grid-area: logo;
 }
 
-.header-logo:hover {
+.header_logo:hover {
   text-decoration: underline;
 }
 
 .header_nav {
-  grid-area: menu;
-  display: flex;
   justify-content: center;
+  display: flex;
+  grid-area: menu;
+}
+
+.header_logo,
+.header_nav,
+.header_button {
+  width: 100%;
 }
 
 .header_button {
-  grid-area: button;
   display: flex;
-  justify-content: flex-end;
-}
-
-@media only screen and (max-width: 768px) {
-  .header {
-    display: grid;
-    align-items: center;
-    grid-template-columns: auto 1fr auto;
-    grid-template-rows: auto;
-    padding-top: 10px;
-    grid-template-areas:
-      "logo"
-      "menu"
-      "button"
-    ;
-  }
+  justify-content: end;
+  grid-area: button;
 }
 
 .header_button button {
@@ -173,9 +149,9 @@ img {
   border: 0;
   padding: 6px 12px;
   background: none;
-  border-radius: var(--border-radius);
+  border-radius: 10px;
   border: 2px solid transparent;
-  font-size: var(--font-size-base);
+  font-size: 1rem;
   font-weight: 600;
   color: var(--black);
 }
@@ -184,6 +160,7 @@ img {
   border: 2px solid var(--black);
 }
 
+/* Header -> Navigation */
 .header_nav ul {
   list-style-type: none;
   display: flex;
@@ -197,17 +174,18 @@ img {
   text-decoration: none;
 }
 
+.header_nav ul a.active {
+  color: #7E7E7E;
+}
+
 .header_nav ul a:hover {
   text-decoration: underline;
 }
 
-.header_nav ul a.active {
-  color: var(--gray);
-}
-
+/* Author - HomePage */
 .author {
   padding: 10px 0;
-  text-align: 10px;
+  text-align: center;
 }
 
 .author_heading {
@@ -215,12 +193,14 @@ img {
   margin-bottom: 5px;
 }
 
-.autor_body {
-  font-size: var(--font-size-base);
+.author_body {
+  font-size: var(--font-size-md);
   margin: 5px 0 40px 0;
 }
 
-.article_heading {
+
+/* Home Article List */
+.articles_heading {
   margin-top: 4rem;
   font-weight: 400;
 }
@@ -229,15 +209,17 @@ img {
   list-style-type: none;
   padding: 0;
   margin: 0;
-  font-size: clamp(1.35rem, calc(0.61rem + 0.22w), 1.25rem);
+  font-size: clamp(1.13rem, calc(1.08rem + 0.22vw), 1.25rem);
   display: flex;
+  flex-direction: column;
 }
 
 .article-list_date {
-  font-size: var(--font-size-base);
+  font-size: 1rem;
   color: var(--gray);
-  width: 260px;
+  /* width: 100px; */
   display: inline-block;
+  width: 260px;
 }
 
 .article-ul li a {
@@ -245,10 +227,10 @@ img {
   flex-direction: column;
   justify-content: space-between;
   text-decoration: none;
-  margin: 10px 0
+  margin: 10px 0;
 }
 
-@media screen and (max-width: 768px) {
+@media only screen and (min-width: 768px) {
   .article-ul li a {
     flex-direction: row;
     align-items: center;
@@ -257,11 +239,10 @@ img {
   .article-list_date {
     text-align: right;
   }
-
 }
 
 .article-ul li {
-  font-size: 24px;
+  font-size: 20px;
   cursor: pointer;
   transition: filter 0.1s;
 }
@@ -270,69 +251,41 @@ img {
   border-bottom: 1px solid var(--gray-light);
 }
 
-.article-ul:hover li:hover {
+.article-ul li:hover {
+  filter: none;
+}
+
+.article-ul:hover li {
   filter: blur(3px);
 }
 
-.pagiation {
-  font-size: 1.3rem;
-  color: var(--gray);
-  text-decoration: none;
-  margin-top: 40px;
-  display: inline-block;
+.article-ul:hover li:hover {
+  filter: none;
 }
 
-.pagination:hover {
-  color: var(--black);
-}
 
 .article {
-  white-space: pre-wrap;
+  white-space: nowrap;
+  padding: 15px 0;
+  margin-top: 15px;
 }
 
+
+/* Footer */
 .footer {
-  margin: 4px;
+  margin: 4rem;
   text-align: center;
 }
 
-/* search bar */
-.searchBar {
-  /* visibility: hidden;
-  transform: translateY(-100px); */
-  background-color: var(--black);
-  padding: 4px 0;
-  position: absolute;
-  left: 0;
-  right: 0;
-}
 
-.sarchBar.open {
-  transform: translateY(0);
-  transition: transform 0.1s;
-}
-
-.searchBar input {
-  margin: 0;
-  padding: 0;
-}
-
-#searchClose {
-  position: absolute;
-  top: 0;
-  right: 0;
-  padding: 15px;
-  cursor: pointer;
-  color: var(--gray-light);
-}
-
-/* dashboard admin */
+/* Dashboard Admin */
 .admin-title {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.admin-post {
+.admin-posts {
   padding: 0;
   margin: 0;
 }
@@ -341,7 +294,7 @@ img {
   display: inline-block;
 }
 
-.admin-post-controls form {
+.admin-post-controls .btn {
   display: inline-block;
   background-color: var(--black);
   color: var(--gray-light);
@@ -352,8 +305,51 @@ img {
   line-height: 2;
 }
 
-.admin-post li {
+.admin-posts li {
   display: flex;
   justify-content: space-between;
   padding: 10px 0;
+}
+
+/* SeachBar */
+.searchBar {
+  visibility: hidden;
+  transform: translateY(-100px);
+  background-color: var(--black);
+  padding: 4px 0;
+  position: absolute;
+  left: 0;
+  right: 0;
+}
+
+
+.searchBar.open {
+  transform: translateY(0);
+  transition: transform 0.1s;
+}
+
+.searchBar input {
+  margin: 0;
+  border: 0;
+}
+
+#searchClose {
+  position: absolute;
+  top: 0;
+  right: 0;
+  color: var(--gray-light);
+  padding: 15px;
+}
+
+
+.pagination {
+  font-size: 1.3rem;
+  color: var(--gray);
+  text-decoration: none;
+  margin-top: 40px;
+  display: inline-block;
+}
+
+.pagination:hover {
+  color: var(--black);
 }
