--- a/views/blog/index.ejs
+++ b/views/blog/index.ejs
@@ -5,15 +5,24 @@
 
 <img src="/img/portfolio.webp" alt="Hero image" class="hero-image" width="981" height="528">
 <section class="article">
-  <h2 calss="article_heading">Welcome to my blog</h2>
+  <h2 calss="articles_heading">Welcome to my blog</h2>
   <ul class="article-ul">
-    <li>
-      <a href="#">
-        <span>Post Title</span>
-        <span class="article-list-date">Date</span>
-      </a>
-    </li>
+    <% data.forEach(function(post) { %>
+      <li>
+        <a href="/post/<%= post._id %>">
+          <span>
+            <%= post.title %>
+          </span>
+          <span class="article-list_date">
+            <%= post.createAt.toDateString() %>
+          </span>
+        </a>
+      </li>
+      <% }); %>
   </ul>
 
-  <a href="#" class="pagination">View Older Posts</a>
+  <% if (nextPage !==null ) { %>
+    <a href="/?page=<%= nextPage %>" class="pagination">View Older Posts</a>
+    <% } %>
+
 </section>
