--- a/views/partials/search.ejs
+++ b/views/partials/search.ejs
@@ -3,6 +3,6 @@
     <form class="sarch_form" action="/search" method="post" role="search">
       <input id="searchInput" type="search" aria-label="Search" name="searchTerm" placeholder="Search" />
     </form>
-    <div id="searchClose"></div>
+    <div id="searchClose">Close</div>
   </div>
 </div>
