--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,7 +17,7 @@ body {
   color: var(--black);
   font-size: var(--font-size-base);
   background-color: #FAF5EE;
-  background-image: url("/img/img-noise-361x370.png");
+  /* background-image: url("/img/noise-background.png"); */
   margin: 0;
 }
 
@@ -313,8 +313,8 @@ img {
 
 /* SeachBar */
 .searchBar {
-  /* visibility: hidden;
-  transform: translateY(-100px); */
+  visibility: hidden;
+  transform: translateY(-100px);
   background-color: var(--black);
   padding: 4px 0;
   position: absolute;
