--- a/views/partials/search.ejs
+++ b/views/partials/search.ejs
@@ -1,6 +1,6 @@
 <div class="searchBar">
   <div class="container">
-    <form class="search_form" action="/search" method="post" role="search">
+    <form class="search_form" action="/search" method="POST" role="search">
       <input id="searchInput" type="search" aria-label="Search" name="searchTerm" placeholder="Search" />
     </form>
     <div id="searchClose">Close</div>
