fixing title tag error

--- a/views/layouts/blog/main.ejs
+++ b/views/layouts/blog/main.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <title>
-    <%= homes.title %>
+    <%= title %>
   </title>
   <meta name="viewport" content="" />
   <link rel="stylesheet" href="/css/style.css" />
