--- a/views/layouts/blog/main.ejs
+++ b/views/layouts/blog/main.ejs
@@ -5,7 +5,9 @@
   <title>
     <%= title %>
   </title>
-  <meta name="viewport" content="" />
+  <meta charset="utf-8" />
+  <meta name="description" content="<%= description %>" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="/css/style.css" />
   <script type="text/javascript" src="js/script.js"></script>
 </head>
