--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -4,8 +4,8 @@
   <label for="email">Email:</label>
   <input type="text" id="email" name="email" required><br><br>
 
-  <!-- <label for="username">Username:</label>
-  <input type="text" id="username" name="username" required><br><br> -->
+  <label for="username">Username:</label>
+  <input type="text" id="username" name="username" required><br><br>
 
   <label for="password">Password:</label>
   <input type="password" id="password" name="password" required><br><br>
@@ -15,7 +15,7 @@
 
 <h3>Register</h3>
 
-<form action="/admin" method="post">
+<form action="/register" method="POST">
   <label for="email">Email:</label>
   <input type="text" id="email" name="email" required><br><br>
 
