user login with jwt token

--- a/views/admin/register.ejs
+++ b/views/admin/register.ejs
@@ -1,8 +1,8 @@
-<h3>Login</h3>
+<h3>Register</h3>
 
-<form action="/admin" method="post">
-  <!-- <label for="email">Email:</label>
-  <input type="text" id="email" name="email" required><br><br> -->
+<form action="/register" method="POST">
+  <label for="email">Email:</label>
+  <input type="text" id="email" name="email" required><br><br>
 
   <label for="username">Username:</label>
   <input type="text" id="username" name="username" required><br><br>
@@ -10,5 +10,5 @@
   <label for="password">Password:</label>
   <input type="password" id="password" name="password" required><br><br>
 
-  <input type="submit" value="Login" class="btn">
+  <input type="submit" value="Register" class="btn">
 </form>
