--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -1,1 +1,28 @@
-<p>dashboard</p>
+<div class="admin-title">
+  <h2>Posts</h2>
+  <a href="/admin/posts/new" class="btn btn-primary">+ New Post</a>
+</div>
+
+<ul class="admin-post">
+  <% posts.forEach(function(post) { %>
+    <li>
+      <a href="/admin/posts/<%= post.id %>/edit">
+        <h3>
+          <%= post.title %>
+        </h3>
+      </a>
+      <p>
+        <%= post.body %>
+      </p>
+      <p>
+        <%= post.created_at %>
+      </p>
+      <div class="admin-post-controls">
+        <a href="/admin/posts/<%= post.id %>/edit" class="btn btn-primary">Edit</a>
+        <form action="/admin/posts/<%= post.id %>/delete" method="delete" style="display: inline;">
+          <button class="btn btn-danger">Delete</button>
+        </form>
+      </div>
+    </li>
+    <% }); %>
+</ul>
