editing post and logout function

--- a/views/admin/posts/show.ejs
+++ b/views/admin/posts/show.ejs
@@ -1,1 +1,11 @@
-show
+<a href="/dashboard">&larr; Back</a>
+<h3>
+  <%= post.title %> &nearr;
+</h3>
+</a>
+<p>
+  <%= post.body %>
+</p>
+<p>
+  <%= post.created_at %>
+</p>
