--- a/views/partials/header_admin.ejs
+++ b/views/partials/header_admin.ejs
@@ -9,6 +9,6 @@
   </nav>
 
   <div class="header_button">
-    <button class="search_btn">Logout</button>
+    <a href="/logout">Logout</a>
   </div>
 </header>
