--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -4,23 +4,23 @@
 </div>
 
 <ul class="admin-post">
-  <% posts.forEach(function(post) { %>
+  <% posts.forEach( post=> { %>
     <li>
-      <a href="/admin/posts/<%= post.id %>/edit">
+      <a href="/admin/posts/<%= post._id %>">
         <h3>
-          <%= post.title %>
+          <%= post.title %> &nearr;
         </h3>
       </a>
       <p>
         <%= post.body %>
       </p>
       <p>
-        <%= post.created_at %>
+        <%= post.createAt %>
       </p>
       <div class="admin-post-controls">
-        <a href="/admin/posts/<%= post.id %>/edit" class="btn btn-primary">Edit</a>
-        <form action="/admin/posts/<%= post.id %>/delete" method="delete" style="display: inline;">
-          <button class="btn btn-danger">Delete</button>
+        <a href="/admin/posts/<%= post._id %>/edit" class="btn btn-primary">Edit</a>
+        <form action="/admin/delete-post/<%= post._id %>?_method=delete" method="POST" style="display: inline;">
+          <input type="submit" value="Delete" class="btn btn-danger">
         </form>
       </div>
     </li>
