--- a/views/admin/posts/edit.ejs
+++ b/views/admin/posts/edit.ejs
@@ -1,7 +1,7 @@
 <a href="/dashboard">&larr; Back</a>
 <div class="admin-title">
   <h2>view / Edit Post</h2>
-  <form action="/delete-post/<%= post._id %>?_method=delete" method="POST" style="display: inline;">
+  <form action="/admin/delete-post/<%= post._id %>?_method=delete" method="POST" style="display: inline;">
     <input type="submit" value="Delete" class="btn btn-danger">
   </form>
 </div>
