--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,9 +2,9 @@
   <a href="/" class="header_logo">Nodejs</a>
   <nav class="header_nav">
     <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="/about">About</a></li>
-      <li><a href="/contact">Contact</a></li>
+      <li><a href="/" class="<%= isActiveRoute('/', currentRoute) %>">Home</a></li>
+      <li><a href="/about" class="<%= isActiveRoute('/about', currentRoute) %>">About</a></li>
+      <li><a href="/contact" class="<%= isActiveRoute('/contact', currentRoute) %>">Contact</a></li>
     </ul>
   </nav>
 
