deploying in vercel

--- a/views/blog/index.ejs
+++ b/views/blog/index.ejs
@@ -1,6 +1,6 @@
 <div class="author">
-  <div class="author_heading">Hi, I am Raddy.</div>
-  <div class="author_body">Web developer and content creator</div>
+  <div class="author_heading">Hi, I am IEB_BOY.</div>
+  <!-- <div class="author_body">Web developer (zero)</div> -->
 </div>
 
 <img src="/img/portfolio.webp" alt="Hero image" class="hero-image" width="981" height="528">
