--- a/views/layouts/blog/main.ejs
+++ b/views/layouts/blog/main.ejs
@@ -9,13 +9,16 @@
   <meta name="description" content="<%= description %>" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="/css/style.css" />
+  <link rel="stylesheet" href="/css/custom.css">
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
   <script type="text/javascript" src="js/script.js"></script>
 </head>
 
 <body>
   <main>
     <%- include('../../partials/search.ejs') %>
-      <div class="container">
+      <div class="">
         <%- include('../../partials/header.ejs') %>
           <main class="main">
             <%- body %>
@@ -23,4 +26,8 @@
           <%- include('../../partials/footer.ejs') %>
       </div>
   </main>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </body>
