--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -21,7 +21,7 @@
   </div>
 </header> -->
 
-<nav class="custom-navbar" data-spy="affix" data-offset-top="20">
+<nav class="custom-navbar affix" data-spy="affix" data-offset-top="20">
   <div class="container">
     <a class="logo" href="#">ATW</a>
     <nav class="header_nav">
@@ -31,10 +31,10 @@
         <li><a href="/contact" class="<%= isActiveRoute('/contact', currentRoute) %>">Contact</a></li>
       </ul>
     </nav>
-    <a href="javascript:void(0)" id="nav-toggle" class="hamburger hamburger--elastic">
+    <!-- <a href="javascript:void(0)" id="nav-toggle" class="hamburger hamburger--elastic">
       <div class="hamburger-box">
         <div class="hamburger-inner"></div>
       </div>
-    </a>
+    </a> -->
   </div>
 </nav><!-- End of Page Navbar -->
