--- a/public/css/style.css
+++ b/public/css/style.css
@@ -81,13 +81,28 @@ img {
 } */
 
 .background_image {
+  position: relative;
+  height: 120vh;
+  min-height: 600px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   background-image: url("/img/header.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
 }
 
-/* .background_image .overlay {
+.background_image .overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -95,7 +110,21 @@ img {
   height: 100%;
   background-image: -webkit-linear-gradient(bottom, #fff 0%, rgba(105, 90, 166, 0.35) 99%, rgba(105, 90, 166, 0.5) 100%);
   background-image: linear-gradient(to top, #fff 0%, rgba(105, 90, 166, 0.35) 99%, rgba(105, 90, 166, 0.5) 100%);
-} */
+}
+
+.zindex {
+  z-index: 1;
+}
+
+@media (max-width: 991.98px) {
+  .background_image {
+    background-size: cover;
+  }
+
+  /* .header-content {
+    padding-left: calc(100% / 5) !important;
+  } */
+}
 
 .main {
   padding: 20px 0;
