--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,12 @@
 <footer class="footer">
   &copy; <%= new Date().getFullYear() %> Ready . Built with NodeJS
+
+    <div class="social-links text-right m-auto ml-sm-auto">
+      <a href="javascript:void(0)" class="link"><i class="ti-facebook"></i></a>
+      <a href="javascript:void(0)" class="link"><i class="ti-twitter-alt"></i></a>
+      <a href="javascript:void(0)" class="link"><i class="ti-google"></i></a>
+      <a href="javascript:void(0)" class="link"><i class="ti-pinterest-alt"></i></a>
+      <a href="javascript:void(0)" class="link"><i class="ti-instagram"></i></a>
+      <a href="javascript:void(0)" class="link"><i class="ti-rss"></i></a>
+    </div>
 </footer>
