--- a/views/blog/index.ejs
+++ b/views/blog/index.ejs
@@ -29,6 +29,65 @@
   </div><!-- end of container -->
 </section> <!-- end of about section -->
 
+<!-- service section -->
+<section class="section" id="service">
+  <div class="container text-center">
+    <p class="section-subtitle">What I Do ?</p>
+    <h6 class="section-title mb-6">Service</h6>
+    <!-- row -->
+    <div class="row">
+      <div class="col-md-6 col-lg-3">
+        <div class="service-card">
+          <div class="body">
+            <img src="/img/pencil-case.svg"
+              alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page"
+              class="icon">
+            <h6 class="title">Drawing</h6>
+            <p class="subtitle">Labore velit culpa adipisci excepturi consequuntur itaque in nam
+              molestias dolorem iste quod.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6 col-lg-3">
+        <div class="service-card">
+          <div class="body">
+            <img src="/img/responsive.svg"
+              alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page"
+              class="icon">
+            <h6 class="title">Designing</h6>
+            <p class="subtitle">Labore velit culpa adipisci excepturi consequuntur itaque in nam
+              molestias dolorem iste quod.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6 col-lg-3">
+        <div class="service-card">
+          <div class="body">
+            <img src="/img/toolbox.svg"
+              alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page"
+              class="icon">
+            <h6 class="title">Responsiving</h6>
+            <p class="subtitle">Labore velit culpa adipisci excepturi consequuntur itaque in nam
+              molestias dolorem iste quod.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6 col-lg-3">
+        <div class="service-card">
+          <div class="body">
+            <img src="/img/analytics.svg"
+              alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page"
+              class="icon">
+            <h6 class="title">Analyticing</h6>
+            <p class="subtitle">Labore velit culpa adipisci excepturi consequuntur itaque in nam
+              molestias dolorem iste quod.</p>
+          </div>
+        </div>
+      </div>
+    </div><!-- end of row -->
+  </div>
+</section><!-- end of service section -->
+
 <!-- portfolio section -->
 <section class="section" id="portfolio">
   <div class="container text-center">
@@ -75,6 +134,85 @@
     </div><!-- end of row -->
   </div><!-- end of container -->
 </section> <!-- end of portfolio section -->
+
+<!-- pricing section -->
+<section class="section" id="pricing">
+  <div class="container text-center">
+    <p class="section-subtitle">How Much I Charge ?</p>
+    <h6 class="section-title mb-6">My Pricing</h6>
+    <!-- row -->
+    <div class="pricing-wrapper">
+      <div class="pricing-card">
+        <div class="pricing-card-header">
+          <img class="pricing-card-icon" src="img/scooter.svg"
+            alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+        </div>
+        <div class="pricing-card-body">
+          <h6 class="pricing-card-title">Free</h6>
+          <div class="pricing-card-list">
+            <p>accusamus reprehenderit</p>
+            <p>provident dolorem </p>
+            <p>quos neque</p>
+            <p>fugiat quibusdam</p>
+            <p><i class="ti-close"></i></p>
+            <p><i class="ti-close"></i></p>
+          </div>
+        </div>
+        <div class="pricing-card-footer">
+          <span>$</span>
+          <span>0.00/Month</span>
+        </div>
+        <a href="#" class="btn btn-primary mt-3 pricing-card-btn">Subscribe</a>
+      </div>
+      <div class="pricing-card">
+        <div class="pricing-card-header">
+          <img class="pricing-card-icon" src="img/shipped.svg"
+            alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+        </div>
+        <div class="pricing-card-body">
+          <h6 class="pricing-card-title">Basic</h6>
+          <div class="pricing-card-list">
+            <p>accusamus reprehenderit</p>
+            <p>provident dolorem </p>
+            <p>quos neque</p>
+            <p>fugiat quibusdam</p>
+            <p>accusamus laboriosam</p>
+            <p><i class="ti-close"></i></p>
+          </div>
+        </div>
+        <div class="pricing-card-footer">
+          <span>$</span>
+          <span>9.99/Month</span>
+        </div>
+        <a href="#" class="btn btn-primary mt-3 pricing-card-btn">Subscribe</a>
+      </div>
+      <div class="pricing-card">
+        <div class="pricing-card-header">
+          <img class="pricing-card-icon" src="img/startup.svg"
+            alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+        </div>
+        <div class="pricing-card-body">
+          <h6 class="pricing-card-title">Premium</h6>
+          <div class="pricing-card-list">
+            <p>accusamus reprehenderit</p>
+            <p>provident dolorem </p>
+            <p>quos neque</p>
+            <p>fugiat quibusdam</p>
+            <p>accusamus laboriosam</p>
+            <p>inventore omnis</p>
+          </div>
+        </div>
+        <div class="pricing-card-footer">
+          <span>$</span>
+          <span>99.9/Month</span>
+        </div>
+        <a href="#" class="btn btn-primary mt-3 pricing-card-btn">Subscribe</a>
+      </div>
+
+    </div><!-- end of pricing wrapper -->
+  </div> <!-- end of container -->
+</section><!-- end of pricing section -->
+
 
 <!-- section -->
 <section class="section-sm bg-primary">
