--- a/views/blog/post.ejs
+++ b/views/blog/post.ejs
@@ -1,6 +1,10 @@
-<h1>
-  <%= data.title %>
-</h1>
-<article class="article">
-  <%= data.body %>
-</article>
+<section class="section mt-4">
+  <div class="container">
+    <h1>
+      <%= data.title %>
+    </h1>
+    <article class="article">
+      <%= data.body %>
+    </article>
+  </div>
+</section>
