--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,40 +1,16 @@
-<!-- <header class=" container">
-  <a href="/" class="header_logo">ATW</a>
-  <nav class="header_nav">
-    <ul>
-      <li><a href="/" class="<%= isActiveRoute('/', currentRoute) %>">Home</a></li>
-      <li><a href="/about" class="<%= isActiveRoute('/about', currentRoute) %>">About</a></li>
-      <li><a href="/contact" class="<%= isActiveRoute('/contact', currentRoute) %>">Contact</a></li>
-    </ul>
-  </nav>
-
-  <div class="header_button">
-    <button class="search_btn" aria-expanded="false">Search
-      <svg width="17" height="17" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path
-          d="M7.79167 13.4583C10.9213 13.4583 13.4583 10.9213 13.4583 7.79167C13.4583 4.66205 10.9213 2.125 7.79167 2.125C4.66205 2.125 2.125 4.66205 2.125 7.79167C2.125 10.9213 4.66205 13.4583 7.79167 13.4583Z"
-          stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-        <path d="M14.875 14.875L11.7938 11.7938" stroke="black" stroke-width="2" stroke-linecap="round"
-          stroke-linejoin="round" />
-      </svg>
-    </button>
-  </div>
-</header> -->
-
-<nav class="custom-navbar affix" data-spy="affix" data-offset-top="20">
+<nav class="custom-navbar" data-spy="affix" data-offset-top="20">
   <div class="container">
-    <a class="logo" href="#">ATW</a>
-    <nav class="header_nav">
-      <ul class="nav">
-        <li><a href="/" class="<%= isActiveRoute('/', currentRoute) %>">Home</a></li>
-        <li><a href="/about" class="<%= isActiveRoute('/about', currentRoute) %>">About</a></li>
-        <li><a href="/contact" class="<%= isActiveRoute('/contact', currentRoute) %>">Contact</a></li>
-      </ul>
-    </nav>
-    <!-- <a href="javascript:void(0)" id="nav-toggle" class="hamburger hamburger--elastic">
-      <div class="hamburger-box">
-        <div class="hamburger-inner"></div>
-      </div>
-    </a> -->
+    <a class="logo" href="/">ATW</a>
+    <ul class="nav show">
+      <li class="item">
+        <a class="<%= isActiveRoute('/', currentRoute) %>" href="/">Home</a>
+      </li>
+      <li class="item">
+        <a class="<%= isActiveRoute('/about', currentRoute) %>" href="/about">About</a>
+      </li>
+      <li class="item">
+        <a class="<%= isActiveRoute('/contact', currentRoute) %>" href="/contact">Portfolio</a>
+      </li>
+    </ul>
   </div>
 </nav><!-- End of Page Navbar -->
