adding download file in main page

--- a/views/blog/index.ejs
+++ b/views/blog/index.ejs
@@ -13,8 +13,7 @@
     <!-- about wrapper -->
     <div class="about">
       <div class="about-img-holder">
-        <img src="/img/man.png" class="about-img"
-          alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+        <img src="/img/man.png" class="about-img" alt="atw portfolio">
       </div>
       <div class="about-caption">
         <!-- <p class="section-subtitle">Who Am I ?</p> -->
@@ -23,7 +22,9 @@
           I am a self-motivated and experienced web developer with a demonstrated history of working in the program
           development industry I'm challenging by using my skill and self study the latest technology.
         </p>
-        <button class="btn-rounded btn btn-outline-primary mt-4">Download CV</button>
+        <a href="/download">
+          <button class="btn-rounded btn btn-outline-primary mt-4">Download CV</button>
+        </a>
       </div>
     </div><!-- end of about wrapper -->
   </div><!-- end of container -->
@@ -39,9 +40,7 @@
       <div class="col-md-6 col-lg-3">
         <div class="service-card">
           <div class="body">
-            <img src="/img/pencil-case.svg"
-              alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page"
-              class="icon">
+            <img src="/img/pencil-case.svg" alt="atw portfolio" class="icon">
             <h6 class="title">Drawing</h6>
             <p class="subtitle">Labore velit culpa adipisci excepturi consequuntur itaque in nam
               molestias dolorem iste quod.</p>
@@ -51,9 +50,7 @@
       <div class="col-md-6 col-lg-3">
         <div class="service-card">
           <div class="body">
-            <img src="/img/responsive.svg"
-              alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page"
-              class="icon">
+            <img src="/img/responsive.svg" alt="atw portfolio" class="icon">
             <h6 class="title">Designing</h6>
             <p class="subtitle">Labore velit culpa adipisci excepturi consequuntur itaque in nam
               molestias dolorem iste quod.</p>
@@ -63,9 +60,7 @@
       <div class="col-md-6 col-lg-3">
         <div class="service-card">
           <div class="body">
-            <img src="/img/toolbox.svg"
-              alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page"
-              class="icon">
+            <img src="/img/toolbox.svg" alt="atw portfolio" class="icon">
             <h6 class="title">Responsiving</h6>
             <p class="subtitle">Labore velit culpa adipisci excepturi consequuntur itaque in nam
               molestias dolorem iste quod.</p>
@@ -75,9 +70,7 @@
       <div class="col-md-6 col-lg-3">
         <div class="service-card">
           <div class="body">
-            <img src="/img/analytics.svg"
-              alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page"
-              class="icon">
+            <img src="/img/analytics.svg" alt="atw portfolio" class="icon">
             <h6 class="title">Analyticing</h6>
             <p class="subtitle">Labore velit culpa adipisci excepturi consequuntur itaque in nam
               molestias dolorem iste quod.</p>
@@ -97,8 +90,7 @@
     <div class="row">
       <div class="col-md-4">
         <a href="#" class="portfolio-card">
-          <img src="/img/folio-1.jpg" class="portfolio-card-img"
-            alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+          <img src="/img/folio-1.jpg" class="portfolio-card-img" alt="atw portfolio">
           <span class="portfolio-card-overlay">
             <span class="portfolio-card-caption">
               <h4>Web Designing</h5>
@@ -109,8 +101,7 @@
       </div>
       <div class="col-md-4">
         <a href="#" class="portfolio-card">
-          <img class="portfolio-card-img" src="/img/folio-2.jpg" class="img-responsive rounded"
-            alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+          <img class="portfolio-card-img" src="/img/folio-2.jpg" class="img-responsive rounded" alt="atw portfolio">
           <span class="portfolio-card-overlay">
             <span class="portfolio-card-caption">
               <h4>Web Designing</h5>
@@ -121,8 +112,7 @@
       </div>
       <div class="col-md-4">
         <a href="#" class="portfolio-card">
-          <img class="portfolio-card-img" src="/img/folio-3.jpg" class="img-responsive rounded"
-            alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+          <img class="portfolio-card-img" src="/img/folio-3.jpg" class="img-responsive rounded" alt="atw portfolio">
           <span class="portfolio-card-overlay">
             <span class="portfolio-card-caption">
               <h4>Web Designing</h5>
@@ -138,78 +128,82 @@
 <!-- pricing section -->
 <section class="section" id="pricing">
   <div class="container text-center">
-    <p class="section-subtitle">How Much I Charge ?</p>
-    <h6 class="section-title mb-6">My Pricing</h6>
+    <p class="section-subtitle">I specialize in a range of skills ..</p>
+    <h6 class="section-title mb-6">Coding Solution</h6>
     <!-- row -->
     <div class="pricing-wrapper">
-      <div class="pricing-card">
+      <div class="pricing-card m-4">
         <div class="pricing-card-header">
-          <img class="pricing-card-icon" src="img/scooter.svg"
-            alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+          <img class="pricing-card-icon" src="img/scooter.svg" alt="atw portfolio">
         </div>
         <div class="pricing-card-body">
-          <h6 class="pricing-card-title">Free</h6>
+          <h6 class="pricing-card-title">Front-end Development</h6>
           <div class="pricing-card-list">
-            <p>accusamus reprehenderit</p>
-            <p>provident dolorem </p>
-            <p>quos neque</p>
-            <p>fugiat quibusdam</p>
-            <p><i class="ti-close"></i></p>
-            <p><i class="ti-close"></i></p>
+            <p>I am in good for HTML, CSS, Javascript, Jquery, Ajax, Bootstrap, Tailwind .. </p>
           </div>
         </div>
-        <div class="pricing-card-footer">
-          <span>$</span>
-          <span>0.00/Month</span>
-        </div>
-        <a href="#" class="btn btn-primary mt-3 pricing-card-btn">Subscribe</a>
       </div>
-      <div class="pricing-card">
+      <div class="pricing-card m-4">
         <div class="pricing-card-header">
-          <img class="pricing-card-icon" src="img/shipped.svg"
-            alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+          <img class="pricing-card-icon" src="img/shipped.svg" alt="atw portfolio">
         </div>
         <div class="pricing-card-body">
-          <h6 class="pricing-card-title">Basic</h6>
+          <h6 class="pricing-card-title">Back-end Development</h6>
           <div class="pricing-card-list">
-            <p>accusamus reprehenderit</p>
-            <p>provident dolorem </p>
-            <p>quos neque</p>
-            <p>fugiat quibusdam</p>
-            <p>accusamus laboriosam</p>
-            <p><i class="ti-close"></i></p>
+            <p>I am in good for Ruby on Rails, Node.js, Express.js, EJS ..</p>
           </div>
         </div>
-        <div class="pricing-card-footer">
-          <span>$</span>
-          <span>9.99/Month</span>
-        </div>
-        <a href="#" class="btn btn-primary mt-3 pricing-card-btn">Subscribe</a>
       </div>
-      <div class="pricing-card">
+      <div class="pricing-card m-4">
         <div class="pricing-card-header">
-          <img class="pricing-card-icon" src="img/startup.svg"
-            alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+          <img class="pricing-card-icon" src="img/startup.svg" alt="atw portfolio">
         </div>
         <div class="pricing-card-body">
-          <h6 class="pricing-card-title">Premium</h6>
+          <h6 class="pricing-card-title">Database Management</h6>
           <div class="pricing-card-list">
-            <p>accusamus reprehenderit</p>
-            <p>provident dolorem </p>
-            <p>quos neque</p>
-            <p>fugiat quibusdam</p>
-            <p>accusamus laboriosam</p>
-            <p>inventore omnis</p>
+            <p>I am in good for MySQL, MongoDB, PostgreSQL, SQLite ..</p>
           </div>
         </div>
-        <div class="pricing-card-footer">
-          <span>$</span>
-          <span>99.9/Month</span>
+      </div>
+    </div><!-- end of pricing wrapper -->
+
+    <div class="pricing-wrapper">
+      <div class="pricing-card m-4">
+        <div class="pricing-card-header">
+          <img class="pricing-card-icon" src="img/scooter.svg" alt="atw portfolio">
         </div>
-        <a href="#" class="btn btn-primary mt-3 pricing-card-btn">Subscribe</a>
+        <div class="pricing-card-body">
+          <h6 class="pricing-card-title">Version Control</h6>
+          <div class="pricing-card-list">
+            <p>I am in good for Git, Github, Bitbucket .. </p>
+          </div>
+        </div>
       </div>
 
-    </div><!-- end of pricing wrapper -->
+      <div class="pricing-card m-4">
+        <div class="pricing-card-header">
+          <img class="pricing-card-icon" src="img/scooter.svg" alt="atw portfolio">
+        </div>
+        <div class="pricing-card-body">
+          <h6 class="pricing-card-title">Testing Server</h6>
+          <div class="pricing-card-list">
+            <p>I am in good for Vercel, Render, Heroku, Railways .. </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="pricing-card m-4">
+        <div class="pricing-card-header">
+          <img class="pricing-card-icon" src="img/scooter.svg" alt="atw portfolio">
+        </div>
+        <div class="pricing-card-body">
+          <h6 class="pricing-card-title">Working Culture</h6>
+          <div class="pricing-card-list">
+            <p>I am in good for working with team members .. </p>
+          </div>
+        </div>
+      </div>
+    </div>
   </div> <!-- end of container -->
 </section><!-- end of pricing section -->
 
