--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,11 +6,14 @@
         <a class="<%= isActiveRoute('/', currentRoute) %>" href="/">Home</a>
       </li>
       <li class="item">
-        <a class="<%= isActiveRoute('/about', currentRoute) %>" href="/about">About</a>
+        <a class="<%= isActiveRoute('/portfolio', currentRoute) %>" href="/portfolio">Portfolio</a>
       </li>
-      <li class="item">
-        <a class="<%= isActiveRoute('/contact', currentRoute) %>" href="/contact">Portfolio</a>
-      </li>
+      <!-- <li class="item">
+        <a class="<%#= isActiveRoute('/about', currentRoute) %>" href="/about">About</a>
+      </li> -->
+      <!-- <li class="item">
+        <a class="<%#= isActiveRoute('/contact', currentRoute) %>" href="/contact">Portfolio</a>
+      </li> -->
     </ul>
   </div>
 </nav><!-- End of Page Navbar -->
