--- a/public/css/style.css
+++ b/public/css/style.css
@@ -476,3 +476,44 @@ img {
 .section-lg {
   padding: 100px 0 !important;
 }
+
+/* contact */
+#contact {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  height: 70vh;
+}
+
+.contact-info-upper-container {
+  display: flex;
+  justify-content: center;
+  border-radius: 2rem;
+  border: rgba(105, 90, 166, 0.35)0.1rem solid;
+  border-color: rgb(163, 163, 163, 163);
+  background: (250, 250, 250);
+  margin: 2rem auto;
+  padding: 0.5rem;
+  width: fit-content;
+}
+
+.contact-info-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  /* flex-direction: column; */
+  margin: 0 1rem;
+}
+
+.contact-info-container p {
+  font-size: larger;
+}
+
+.contact-icon {
+  cursor: default;
+}
+
+.email-icon {
+  height: 2.5rem;
+}
