--- a/views/blog/index.ejs
+++ b/views/blog/index.ejs
@@ -25,6 +25,9 @@
         <a href="/download">
           <button class="btn-rounded btn btn-outline-primary mt-4">Download CV</button>
         </a>
+        <a href="/#contact">
+          <button class="btn-rounded btn btn-outline-primary mt-4">Contact Info</button>
+        </a>
       </div>
     </div><!-- end of about wrapper -->
   </div><!-- end of container -->
@@ -225,27 +228,37 @@
   </div> <!-- end of container -->
 </section> <!-- end of section -->
 
-<section class="article">
-  <div class="container">
-    <h2 calss="articles_heading">Welcome to my blog</h2>
-    <ul class="article-ul">
-      <% data.forEach(function(post) { %>
-        <li>
-          <a href="/post/<%= post._id %>">
-            <span>
-              <%= post.title %>
-            </span>
-            <span class="article-list_date">
-              <%= post.createAt.toDateString() %>
-            </span>
-          </a>
-        </li>
-        <% }); %>
-    </ul>
-
-    <% if (nextPage !==null ) { %>
-      <a href="/?page=<%= nextPage %>" class="pagination">View Older Posts</a>
-      <% } %>
-  </div>
-
-</section>
+<!-- contact section -->
+<section class="section" id="contact">
+  <div class="container text-center">
+    <p class="section-subtitle">How can you communicate?</p>
+    <h6 class="section-title mb-5">Contact Me</h6>
+    <div class="contact-info-upper-container">
+      <div class="contact-info-container">
+        <a href="javascript:void(0)" class="link"><i class="icon contact-icon ti-email"></i></a>
+        <p><a href="mailto:aungthiwinn@gmail.com">Aung Thi Win</a></p>
+      </div>
+      <div class="contact-info-container">
+        <a href="javascript:void(0)" class="link"><i class="ti-linkedin"></i></a>
+        <p><a href="https://www.linkedin.com/in/aungthiwin" target="_blank">Linkedin</a></p>
+      </div>
+    </div>
+    <!-- contact form -->
+    <!-- <form action="" class="contact-form col-md-10 col-lg-8 m-auto">
+      <div class="form-row">
+        <div class="form-group col-sm-6">
+          <input type="text" size="50" class="form-control" placeholder="Your Name" required>
+        </div>
+        <div class="form-group col-sm-6">
+          <input type="email" class="form-control" placeholder="Enter Email" requried>
+        </div>
+        <div class="form-group col-sm-12">
+          <textarea name="comment" id="comment" rows="6" class="form-control" placeholder="Write Something"></textarea>
+        </div>
+        <div class="form-group col-sm-12 mt-3">
+          <input type="submit" value="Send Message" class="btn btn-outline-primary rounded">
+        </div>
+      </div>
+    </form>end of contact form -->
+  </div><!-- end of container -->
+</section><!-- end of contact section -->
