modifing main page

--- a/views/blog/index.ejs
+++ b/views/blog/index.ejs
@@ -235,12 +235,16 @@
     <h6 class="section-title mb-5">Contact Me</h6>
     <div class="contact-info-upper-container">
       <div class="contact-info-container">
-        <a href="javascript:void(0)" class="link"><i class="icon contact-icon ti-email"></i></a>
-        <p><a href="mailto:aungthiwinn@gmail.com">Aung Thi Win</a></p>
+        <a href="javascript:void(0)" class="link"><i class="icon ti-email"></i></a>
+        <p><a href="mailto:aungthiwinn@gmail.com">aungthiwinn@gmail.com</a></p>
       </div>
       <div class="contact-info-container">
-        <a href="javascript:void(0)" class="link"><i class="ti-linkedin"></i></a>
+        <a href="javascript:void(0)" class="link"><i class="icon ti-linkedin"></i></a>
         <p><a href="https://www.linkedin.com/in/aungthiwin" target="_blank">Linkedin</a></p>
+      </div>
+      <div class="contact-info-container">
+        <a href="javascript:void(0)" class="link"><i class="icon ti-github"></i></a>
+        <p><a href="https://github.com/gipsycloud" target="_blank">Github</a></p>
       </div>
     </div>
     <!-- contact form -->
