--- a/public/css/style.css
+++ b/public/css/style.css
@@ -493,7 +493,7 @@ img {
   border-color: rgb(163, 163, 163, 163);
   background: (250, 250, 250);
   margin: 2rem auto;
-  padding: 0.5rem;
+  padding: 1.5rem;
   width: fit-content;
 }
 
@@ -502,7 +502,7 @@ img {
   align-items: center;
   justify-content: center;
   gap: 0.5rem;
-  /* flex-direction: column; */
+  flex-direction: column;
   margin: 0 1rem;
 }
 
@@ -510,10 +510,7 @@ img {
   font-size: larger;
 }
 
-.contact-icon {
+.icon {
   cursor: default;
-}
-
-.email-icon {
-  height: 2.5rem;
+  font-size: xxx-large;
 }
