modifing main page

--- a/views/blog/index.ejs
+++ b/views/blog/index.ejs
@@ -222,7 +222,9 @@
         <p class="m-0 text-light">Always feel Free to Contact & Hire me</p>
       </div>
       <div class="col-sm offset-sm-2 offset-md-3">
-        <button class="btn btn-lg my-font btn-light rounded">Hire Me</button>
+        <a href="mailto:aungthiwinn@gmail.com">
+          <button class="btn btn-lg my-font btn-light rounded">Hire Me</button>
+        </a>
       </div>
     </div> <!-- end of row -->
   </div> <!-- end of container -->
@@ -234,10 +236,6 @@
     <p class="section-subtitle">How can you communicate?</p>
     <h6 class="section-title mb-5">Contact Me</h6>
     <div class="contact-info-upper-container">
-      <div class="contact-info-container">
-        <a href="javascript:void(0)" class="link"><i class="icon ti-email"></i></a>
-        <p><a href="mailto:aungthiwinn@gmail.com">aungthiwinn@gmail.com</a></p>
-      </div>
       <div class="contact-info-container">
         <a href="javascript:void(0)" class="link"><i class="icon ti-linkedin"></i></a>
         <p><a href="https://www.linkedin.com/in/aungthiwin" target="_blank">Linkedin</a></p>
