comment out for header file

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,9 +5,9 @@
       <li class="item">
         <a class="<%= isActiveRoute('/', currentRoute) %>" href="/">Home</a>
       </li>
-      <li class="item">
-        <a class="<%= isActiveRoute('/portfolio', currentRoute) %>" href="/portfolio">Portfolio</a>
-      </li>
+      <!-- <li class="item">
+        <a class="<%#= isActiveRoute('/portfolio', currentRoute) %>" href="/portfolio">Portfolio</a>
+      </li> -->
       <!-- <li class="item">
         <a class="<%#= isActiveRoute('/about', currentRoute) %>" href="/about">About</a>
       </li> -->
